@@ -886,7 +886,7 @@ public class EntryBean extends AbstractEditorBean
 
   /** Field description */
   @Config(Constants.CONFIG_ADMIN_PAGESIZE)
-  private Integer pageSize = new Integer(20);
+  private Integer pageSize = Integer.valueOf(20);
 
   /** Field description */
   private String tagString;
